fix(portfolio): :art: fix contact h1 dark mode color

--- a/src/styles/pages/contact/style.scss
+++ b/src/styles/pages/contact/style.scss
@@ -1,7 +1,7 @@
 .contact-page {
 
   h2 {
-    @include text-gradient($primary-gradient);
+    @include set-text-tag-color-dynamic();
 
     font-size: 1.6rem;
     font-weight: 900;
